fix for dropdown not showing the right count before clicking

--- a/client/assets/app.css
+++ b/client/assets/app.css
@@ -603,7 +603,7 @@ pre.pretty-json{
 .logEntries{
   min-height: 40px;
   height: 60px;
-  transition: all linear 0.3s;
+  transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s;
 }
 
 .logEntries.ng-hide {
